start point of tutorial

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <img id="DOM_lockImg" width="250" src="assets/lock-fill.svg" alt="Lock">
         </div>
         <div id="combination">
-                <input type="text" class="comboDigit">
-                <input type="text" class="comboDigit">
-                <input type="text" class="comboDigit">
-                <input type="text" class="comboDigit">
+                <input type="text" class="DOM_comboDigit">
+                <input type="text" class="DOM_comboDigit">
+                <input type="text" class="DOM_comboDigit">
+                <input type="text" class="DOM_comboDigit">
         </div>
     </main>
 
