--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 
 <body>
-    <main id="DOM_main">
-        <div id="lockDiv">
+    <main id="DOM_main" >
+        <div id="lockDiv" >
             <img id="DOM_lockImg" width="250" src="assets/lock-fill.svg" alt="Lock">
         </div>
         <div id="combination">
-                <input type="text" class="DOM_comboDigit">
-                <input type="text" class="DOM_comboDigit">
-                <input type="text" class="DOM_comboDigit">
-                <input type="text" class="DOM_comboDigit">
+            <input type="text" maxlength="1" class="DOM_comboDigit">
+            <input type="text" maxlength="1" class="DOM_comboDigit">
+            <input type="text" maxlength="1" class="DOM_comboDigit">
+            <input type="text" maxlength="1" class="DOM_comboDigit">
         </div>
     </main>
 
